<resources>
    <string name="app_name">تطبيق رقوش</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_send">أرسل</string>
    <string name="msg_reset_pwd">أدخل البريد الإلكتروني الذي قمت بتسجيل من خلاله</string>
    <string name="action_register">إنشاء حساب جديد</string>
    <string name="action_forget_pwd">نسيت كلمة المرور ؟</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="txt_new">صدر حديثاً</string>
    <string name="txt_most_popular">الأكثر مبيعاًً</string>
    <string name="txt_favorite">المفضلةًً</string>

</resources>
