<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zedney.rokouch.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="26dp"
                android:src="@mipmap/ic_launcher"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="@drawable/rectangle"
                   android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />




                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="@drawable/rectangle"
                    android:padding="10dp"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/txt_reset_action"
                android:text="@string/action_forget_pwd"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"/>



            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_roze"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="46dp"
                android:paddingRight="46dp"
                android:textSize="18dp"

                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"

                android:textSize="17dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:text="@string/action_register"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
