<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg"
    android:paddingTop="@dimen/activity_vertical_margin"
 >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="26dp"
                android:text="@string/msg_reset_pwd"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/rectangle"
                android:layout_marginBottom="16dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />




            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_roze"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="46dp"
                android:paddingRight="46dp"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_send"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
